video/ome/network-policies/allow-streamer.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-streamer
  namespace: ome
spec:
  podSelector:
    matchLabels:
      app: ovenmediaengine
      ome-type: origin
  ingress:
  - ports:
    - port: rtmp
    - port: srt
      protocol: UDP
    - port: srt
