video/ome/network-policies/allow-viewer-origin.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-viewer-origin
  namespace: ome
spec:
  podSelector:
    matchLabels:
      app: ovenmediaengine
      ome-type: origin
  ingress:
  - ports:
    - port: publish
    - port: webrtc-10000
      protocol: UDP
    - port: turn
